firefam-rs/tui/src/bottom_pane/snapshots/firefam_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 704
expression: rendered
---
Upload logs?

The following files will be sent:
  • firefam-logs.log
  • firefam-doctor-report.json
  • rollout.jsonl
  • auto-review-rollout.jsonl
