firefam-rs/tui/src/bottom_pane/snapshots/firefam_tui__bottom_pane__feedback_view__tests__feedback_view_bad_result.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (bad result)
▌
▌ (optional) Write a short description to help us further

↑/↓ Navigate · enter Select · tab Complete · esc to cancel
